EES-5554 Prevent overflowing text breaking mobile layouts at 200%+ zoom

--- a/src/explore-education-statistics-api-docs/source/stylesheets/app.scss
+++ b/src/explore-education-statistics-api-docs/source/stylesheets/app.scss
@@ -1,5 +1,7 @@
 .technical-documentation {
+  hyphens: auto;
   max-width: 50em;
+  word-break: break-word;
 }
 
 .toc__list li {
